--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,10 +2,25 @@
     display: flex;
 
 }
+/* Ne pas supprimer */
+.disabled {
+    opacity: .5;
+    pointer-events: none;
+}
+/*  */
 .voiture_liste__voiture{
     display: inline-block;
     margin-bottom: 10px;
     border-bottom: 2px solid black;
     margin-left: 10px;
     padding: 5px;
+    max-width: 20%;
+}
+
+.voiture_liste__image-wrapper img{
+    max-width: 100%;
+}
+.voiture_liste__voiture:hover{
+    border: burlywood 2px solid;
+    cursor: pointer;
 }
