integration bouton voir plus ainsi que le btn retour apres recerche

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,9 @@
   opacity: 0.5;
   pointer-events: none;
 }
+.hidden{
+  display: none;
+}
 /*  */
 .voiture_liste__voiture {
   display: inline-block;
