--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,6 +318,7 @@ titre {
 }
 
 /*carousel*/
+/*https://www.cssscript.com/infinite-multi-slide-elder-carousel/*/
 .box {
   margin-right: 5px;
   margin-left: 5px;
@@ -331,6 +332,4 @@ titre {
 .carousel{
   margin: 30px 0;
 }
-.ec__nav{
-  color:white;
-}
+
