--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+@import "./voitureDetail.css";
+@import "./connexion.css";
+@import "./systemes.css";
+@import "./carousel.css";
 body {
   background-color: #303030;
   color: #dc6a2b;
@@ -78,256 +82,4 @@ titre {
 .voiture_liste__voiture:hover {
   border: burlywood 2px solid;
   cursor: pointer;
-}
-
-/*Voiture détail */
-.ligne {
-  display: flex;
-  flex-wrap: wrap;
-}
-.colonne {
-  display: flex;
-  flex-direction: column;
-}
-.distribue {
-  justify-content: space-between;
-}
-.centre {
-  justify-content: center;
-}
-.aLaFin {
-  justify-content: flex-end;
-}
-[data-component="VoitureDetail"] form {
-  display: flex;
-}
-
-[data-component="VoitureDetail"] a {
-  text-decoration: none;
-
-  color: black;
-}
-.infoVoiture {
-  flex: 2;
-}
-.imagesVoiture {
-  flex: 3;
-}
-[data-component="VoitureDetail"] input[disabled] {
-  opacity: 1;
-  pointer-events: none;
-  background-color: white;
-  border: 1px black solid;
-  color: black;
-  padding: 3px;
-  margin-bottom: 10px;
-}
-
-[data-component="VoitureDetail"] select[disabled] {
-  opacity: 1;
-  pointer-events: none;
-  background-color: white;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  text-indent: 1px;
-  text-overflow: "";
-  width: 170px;
-  border: 1px black solid;
-  color: black;
-  padding: 3px;
-  margin-bottom: 10px;
-}
-
-.imagesVoiture img {
-  width: 200px;
-  margin-right: 20px;
-}
-[data-component="VoitureDetail"],
-[data-component="Connexion"] {
-  margin-right: 40px;
-  margin-left: 40px;
-}
-[data-component="VoitureDetail"] a {
-  padding: 3px;
-  background-color: #ed712b;
-  color: white;
-  margin-left: 5px;
-  margin-bottom: 20px;
-  margin-top: 40px;
-}
-
-/* Connexion */
-.logo > a {
-  display: inline-block;
-  padding-top: 0.2em;
-}
-.connexion img {
-  width: 2em;
-  margin-left: 0.3em;
-}
-
-.centreV {
-  align-items: center;
-}
-[data-component="Connexion"] a {
-  text-decoration: none;
-  color: black;
-}
-[data-component="Connexion"] .ligne {
-  margin-bottom: 10px;
-}
-[data-component="Connexion"] input {
-  margin-left: 5px;
-  margin-right: 5px;
-}
-[data-component="Connexion"] {
-  background-color: #505050;
-}
-@import url("https://fonts.googleapis.com/css2?family=Red+Rose:wght@500&display=swap");
-[data-component="Connexion"],
-[data-component="Connexion"] a {
-  font-family: "Red Rose";
-  text-align: center;
-  color: #ed712b;
-}
-[data-component="Connexion"] input[type="submit"] {
-  background-color: #ed712b;
-  color: white;
-  padding: 5px 5px;
-  margin: 2px 2px;
-  cursor: pointer;
-  text-shadow: 1px 1px 1px #000;
-  border-radius: 10px;
-}
-
-/* Système */
-/* https://codepen.io/florantara/pen/dROvdb */
-/* Table Styles */
-
-.table-wrapper {
-  margin: 10px 70px 70px;
-  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
-}
-
-.fl-table {
-  border-radius: 5px;
-  font-size: 12px;
-  font-weight: normal;
-  border: none;
-  border-collapse: collapse;
-  width: 100%;
-  max-width: 100%;
-  white-space: nowrap;
-  background-color: white;
-}
-
-.fl-table td,
-.fl-table th {
-  text-align: center;
-  padding: 8px;
-}
-
-.fl-table td {
-  border-right: 1px solid #f8f8f8;
-  font-size: 16px;
-}
-
-.fl-table thead th {
-  color: #ffffff;
-  background: #4fc3a1;
-  font-size: 18px;
-}
-
-.fl-table thead th:nth-child(odd) {
-  color: #ffffff;
-  background: #324960;
-}
-
-.fl-table tr:nth-child(even) {
-  background: #f8f8f8;
-}
-
-/* Responsive */
-
-@media (max-width: 767px) {
-  .fl-table {
-    display: block;
-    width: 100%;
-  }
-  .table-wrapper:before {
-    content: "Scroll horizontally >";
-    display: block;
-    text-align: right;
-    font-size: 11px;
-    color: white;
-    padding: 0 0 10px;
-  }
-  .fl-table thead,
-  .fl-table tbody,
-  .fl-table thead th {
-    display: block;
-  }
-  .fl-table thead th:last-child {
-    border-bottom: none;
-  }
-  .fl-table thead {
-    float: left;
-  }
-  .fl-table tbody {
-    width: auto;
-    position: relative;
-    overflow-x: auto;
-  }
-  .fl-table td,
-  .fl-table th {
-    padding: 20px 0.625em 0.625em 0.625em;
-    height: 60px;
-    vertical-align: middle;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 120px;
-    font-size: 13px;
-    text-overflow: ellipsis;
-  }
-  .fl-table thead th {
-    text-align: left;
-    border-bottom: 1px solid #f7f7f9;
-  }
-  .fl-table tbody tr {
-    display: table-cell;
-  }
-  .fl-table tbody tr:nth-child(odd) {
-    background: none;
-  }
-  .fl-table tr:nth-child(even) {
-    background: transparent;
-  }
-  .fl-table tr td:nth-child(odd) {
-    background: #f8f8f8;
-    border-right: 1px solid #e6e4e4;
-  }
-  .fl-table tr td:nth-child(even) {
-    border-right: 1px solid #e6e4e4;
-  }
-  .fl-table tbody td {
-    display: block;
-    text-align: center;
-  }
-}
-
-/*carousel*/
-/*https://www.cssscript.com/infinite-multi-slide-elder-carousel*/
-.box {
-  margin-right: 5px;
-  margin-left: 5px;
-
-  display: flex;
-  justify-content: center;
-}
-.box img {
-  width: 250px;
-}
-.carousel {
-  margin: 30px 0;
 }
