--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
 @import "./systemes.css";
 @import "./carousel.css";
 @import "./formulaireAjoutUtilisateur.css";
+@import "./accueil.css";
 body {
   background-color: #303030;
   color: #dc6a2b;
@@ -74,7 +75,7 @@ titre {
   border-bottom: 2px solid black;
   margin-left: 10px;
   padding: 5px;
-  max-width: 20%;
+  /* max-width: 20%; */
 }
 
 .voiture_liste__image-wrapper img {
