--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,3 +144,8 @@ a.ligne {
   margin-right: 10px;
   align-items: center;
 }
+
+[data-component="Header"] a {
+  text-decoration: none;
+  color: #ed712b;
+}
