--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,66 +1,90 @@
-<<<<<<< HEAD
-body {    
+body {   
+  margin: 0; 
   background-color: #303030;
   color: #dc6a2b;
-  font-size: 16pt;
   font-family: 'Red Rose', sans-serif;
-  
+  padding: 0;
+ 
+}
+
+header{
+  width:100%;
+}
+
+#btn-menu{
+  display: none;
 }
 
 hr {
   
-  height: 1px;
+  height: 2px;
   border: none;
   background-color:  #dc6a2b;
   
-}
+}*/
 
-titre {
-  text-align: center;
-}
-
-#menu{
+/****/
+.menu{
   background-color: #292929; 
   padding: 5px;
 }
 
-#menu ul{
+
+
+
+.menu ul{
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
+  display: flex;
+ 
+  
 }
 
-#menu ul li {
+.menu li {
+  flex-grow: 1;
+  text-align: center;
+  border-right: 1px solid #dc6a2b;
+}
+
+.menu ul li {
   display: inline-block;
 }
 
-#menu ul li a{
+
+
+.menu ul li a{
   color:  #dc6a2b;
   display: block;
   text-decoration: none;
-  padding: 10px;
+  padding: 15px;
+  
 }
 
-#menu ul li a:hover{
-  color:  #ffbc9815;
+.menu ul li a:hover{
+  /*color:  #ffbc9815;*/
   text-decoration: none;
-  /*background-color: #dc6a2b;*/
- /* color: #29292910; */
+  background-color: #dc6a2b;
+  background-color: #ffbc9815
+
 }
 
-.item-right{
-  float: right;
+.adresse {
+  display: flex;
+  text-align: center;
+}
+
+.horaire {
+  display: flex;
+  text-align: right;
 }
 
 
-=======
-body {
-  margin-left: 20px;
-  margin-right: 20px;
-}
+/*** Fin Ricardo***/
 
->>>>>>> 6b38ad67b31194073f01dede364e71a7cade2e29
+
+
+
 .VoitureListe {
   display: flex;
 }
@@ -77,13 +101,34 @@ body {
   margin-left: 10px;
   padding: 5px;
   max-width: 20%;
+  width: 300px;
+  height: 500px;
 }
+
+.voiture_liste__image-wrapper{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  margin: auto;
+ 
+} 
 
 .voiture_liste__image-wrapper img {
   max-width: 100%;
 }
+
+.voiture_liste__image{
+  width: 300px;
+  height: 200px;
+  /*object-fit: contain;*/
+
+}
+
+
 .voiture_liste__voiture:hover {
-  border: burlywood 2px solid;
+  /*border: burlywood 2px solid;*/
   cursor: pointer;
 }
 
