ajuster noms fichiers images

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,7 +60,7 @@ titre {
 .menu ul li a:hover {
   /*color:  #ffbc9815;*/
   text-decoration: none;
-  /*  background-color: #fbc9815; */
+  background-color: #fbc981;
 }
 
 .adresse {
