--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,9 +100,9 @@ titre {
   border-bottom: 2px solid black;
   margin-left: 10px;
   padding: 5px;
-  max-width: 20%;
+  /* max-width: 20%; */
   width: 300px;
-  height: 500px;
+  /* height: 500px; */
 }
 
 .voiture_liste__image-wrapper {
@@ -111,7 +111,6 @@ titre {
   justify-content: space-around;
   flex-wrap: wrap;
   max-width: 1000px;
-  margin: auto;
 }
 
 .voiture_liste__image-wrapper img {
@@ -120,7 +119,7 @@ titre {
 
 .voiture_liste__image {
   width: 300px;
-  height: 200px;
+
   /*object-fit: contain;*/
 }
 
@@ -192,4 +191,8 @@ button.proceed {
 [data-component="Header"] a {
   text-decoration: none;
   color: #ed712b;
+}
+article.voiture_liste__voiture h2,
+article.voiture_liste__voiture h3 {
+  margin: 0;
 }
