changement home par accueil page accueil

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,10 +28,10 @@ header {
 titre {
   text-align: center;
 }
-.menu {
+/*.menu {
   background-color: #292929;
   padding: 5px;
-}
+}*/
 
 .menu ul {
   list-style: none;
