--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,9 +80,15 @@ titre {
   padding: 5px;
   /* max-width: 20%; */
 }
+.voiture_liste__image-wrapper {
+  width: 100px;
+  
+}
 
 .voiture_liste__image-wrapper img {
   max-width: 100%;
+  height: 130px;
+  object-fit: cover;
 }
 .voiture_liste__voiture:hover {
   border: burlywood 2px solid;
