ajustement page détail voiture

--- a/styles/voitureDetail.css
+++ b/styles/voitureDetail.css
@@ -39,6 +39,10 @@
   color: black;
   padding: 3px;
   margin-bottom: 10px;
+
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 [data-component="VoitureDetail"] select[disabled] {
@@ -49,11 +53,14 @@
   -moz-appearance: none;
   text-indent: 1px;
   text-overflow: "";
-  width: 175px;
+  width: 170px;
   border: 1px black solid;
   color: black;
   padding: 3px;
   margin-bottom: 10px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 .imagesVoiture img {
