--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,48 @@ titre {
   text-align: right;
 }
 
+.swiper-container {
+
+    
+    width: 100%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: auto;
+    max-width: 1200px;
+    
+}
+
+.voiture_liste__image{
+
+    width: 600px;
+    height: 200px;
+    object-fit: cover;
+  
+}
+
+voiture_liste__image-wrapper{
+  width: 100%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: auto;
+  max-width: 1000px;
+  align-content: center;
+  
+}
+
+
+voiture_liste__image{
+
+  width: 600px;
+  height: 200px;
+  object-fit: cover;
+
+}
+
+
+
+
+
 /*** Fin Ricardo***/
 
 .item-right {
@@ -100,6 +142,7 @@ titre {
   border-bottom: 2px solid black;
   margin-left: 10px;
   padding: 5px;
+
   /* max-width: 20%; */
   width: 300px;
   /* height: 500px; */
@@ -122,6 +165,7 @@ titre {
 
   /*object-fit: contain;*/
 }
+
 
 .voiture_liste__voiture:hover {
   /*border: burlywood 2px solid;*/
