--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,7 @@
 .header img {
-  display: inline-block;
+  /* display: inline-block; */
   width: 2em;
+  height: fit-content;
 }
 .header a {
   display: flex;
