--- a/styles/header.css
+++ b/styles/header.css
@@ -1,13 +1,13 @@
 .header img {
   /* display: inline-block; */
-  width: 3em;
-  height: fit-content;
+  width: 4em;
+  object-fit: scale-down;
 }
 .header a {
   display: flex;
 }
-#logo{
+#logo {
   width: 5em;
-  position:relative;
-  top:10px;
+  position: relative;
+  top: 10px;
 }
