--- a/styles/voitureDetail.css
+++ b/styles/voitureDetail.css
@@ -39,7 +39,7 @@
   color: black;
   padding: 3px;
   margin-bottom: 10px;
-
+  width: 10rem;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -53,7 +53,7 @@
   -moz-appearance: none;
   text-indent: 1px;
   text-overflow: "";
-  width: 170px;
+  width: 10rem;
   border: 1px black solid;
   color: black;
   padding: 3px;
