--- a/styles/connexion.css
+++ b/styles/connexion.css
@@ -1,4 +1,11 @@
 /* Connexion */
+[data-component="Connexion"] {
+  width: 100%;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .logo > a {
   display: inline-block;
   padding-top: 0.2em;
