--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,8 @@
 @import "./footer.css";
 @import "./header.css";
 @import "./termes.css";
+@import "./contact.css";
+@import "./qui.css";
 body {
   background-color: #303030;
   color: #dc6a2b;
