--- a/styles/formulaireAjoutUtilisateur.css
+++ b/styles/formulaireAjoutUtilisateur.css
@@ -1,4 +1,57 @@
-.FormulaireAjoutUtilisateur input,
+.FormulaireAjoutUtilisateur{
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 70px;
+}
+.FormulaireAjoutUtilisateur .distribue input, .FormulaireAjoutUtilisateur .distribue select{
+  width: 40%;
+}
+
+.FormulaireAjoutUtilisateur form{
+  max-width: 70%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top:30px;
+  margin-bottom:30px;
+}
+.FormulaireAjoutUtilisateur button {
+  background-color: #ed712b;
+  color: white;
+  padding: 5px 5px;
+  margin: 2px 2px;
+  cursor: pointer;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 5px;
+  width: 100px;
+  display: block;
+  margin-left: auto;
+
+}
+.input-wrapper {
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 615px) {
+  
+  .FormulaireAjoutUtilisateur .distribue{
+    flex-direction: column;
+  }
+  .FormulaireAjoutUtilisateur .distribue input, .Profil .distribue select{
+    width: 100%;
+    min-width: 200px;
+  }
+  .FormulaireAjoutUtilisateur .input-wrapper{
+    align-content: center;
+  }
+  .FormulaireAjoutUtilisateur .distribue label{
+    font-size: 14pt;
+  }
+
+}
+
+
+
+/* .FormulaireAjoutUtilisateur input,
 .FormulaireAjoutUtilisateur select {
   width: 250px;
   margin-bottom: 5px;
@@ -29,3 +82,4 @@
   width: 100px;
   align-self: flex-end;
 }
+ */
