--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@
 @import "./termes.css";
 @import "./contact.css";
 @import "./qui.css";
+@import "./profil.css";
 body {
   background-color: #303030;
   color: #dc6a2b;
@@ -207,7 +208,7 @@ a.ligne {
 
 .filtres button,
 button.proceed,
-button.retour {
+button.retour{
   background-color: #ed712b;
   color: white;
   padding: 5px 5px;
