--- a/styles/voitureDetail.css
+++ b/styles/voitureDetail.css
@@ -85,3 +85,15 @@
   margin-bottom: 20px;
   margin-top: 40px;
 }
+
+
+[data-component="VoitureDetail"] button {
+  padding: 3px;
+  background-color: #ed712b;
+  color: white;
+  margin-left: 5px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  font-size: 16pt;
+  font-family: "Red Rose", sans-serif;
+}
