--- a/styles/voitureDetail.css
+++ b/styles/voitureDetail.css
@@ -36,11 +36,14 @@
 .imagesVoiture {
   flex: 3;
 }
+
+[data-component="VoitureDetail"] .input-wrapper {
+  margin-bottom: 0;
+}
 [data-component="VoitureDetail"] input[disabled],
 [data-component="VoitureDetail"] input {
   opacity: 1;
-  pointer-events: none;
-
+  background-color: white;
   border: 1px black solid;
   color: black;
   padding: 3px;
@@ -50,7 +53,9 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
-
+[data-component="VoitureDetail"] .sansPointeur {
+  pointer-events: none;
+}
 [data-component="VoitureDetail"] select[disabled],
 [data-component="VoitureDetail"] select {
   opacity: 1;
