--- a/styles/formulaire.css
+++ b/styles/formulaire.css
@@ -1,6 +1,7 @@
 button,
 input[type="submit"],
-[data-component="VoitureDetail"] a {
+[data-component="VoitureDetail"] a,
+[data-component="VoitureDetailSGC"] a {
   border: 0;
   line-height: 2.5;
   padding: 0 20px;
