--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@
 @import "./profil.css";
 @import "./utilisateurSysteme.css";
 @import "./formulaire.css";
+@import "./voitureDetailSGC.css";
 
 body {
   background-color: #303030;
