--- a/styles/custom-k.css
+++ b/styles/custom-k.css
@@ -1,22 +1,42 @@
+body {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+.bg-ruedas {  
+  background-image: url(../assets/images/penu_f_50.png);
+  background-repeat: no-repeat;
+  background-size: 40%;
+  background-position: 50% bottom;
+  box-sizing: border-box;
+  height: 100%;
+  position: fixed;
+  width: 100%;
+  z-index: -1;
+}
+
 /***** section header *****/
 .box-shop {
-  align-items: center;
-  border-radius: 50%;
-  box-shadow: 0 0 0 3px;
-  display: flex;
   box-sizing: border-box;
-  height: 55px;
-  justify-content: center;
-  margin-left: 12px;
-  padding: 6px 6px 6px 3px;
-  max-width: 55px;
+  display: flex;
+  height: 60px;
+  margin-left: 4px;
+  max-width: 60px;
 }
 .box-shop img {
-  width: 70%;
+  width: 100%;
 }
 
 .menu ul li:first-child {
   border-left: 1px solid #dc6a2b;
+}
+.box-panier {
+  align-items: center;
+  display: flex;
+  width: 50px;
+}
+.box-panier a {
+  width: 100%;
+  height: 50%;
 }
 
 /***** section filters*****/
@@ -70,13 +90,17 @@ article.voiture_liste__voiture {
   background-color: rgba(237, 113, 43, 0.9);
   border-radius: 2px;
   border: none;
+  box-sizing: border-box;
   justify-content: flex-start;
-  padding: 8px 0;
+  padding: 8px 16px;
   height: auto;
+  margin-left: 0;
+  max-width: 300px;
+  width: 100%;
 }
 .info_voiture {
   color: #303030;
-  padding: 8px 14px 0;
+  padding: 8px 0 0;
 }
 
 .label-liste {
@@ -94,12 +118,14 @@ article.voiture_liste__voiture {
   padding: 4px 6px;
 }
 div.voiture_liste__image-wrapper {
+  background-color: #fff;
   max-width: 270px;
-  width: 100%;
   margin: auto;
+  width: 100%;
 }
 .voiture_liste__image-wrapper img {
   border-radius: 2px;
+  object-fit: cover;
 }
 
 .menu-section {
@@ -108,7 +134,7 @@ div.voiture_liste__image-wrapper {
 
 /* media queries */
 
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 1700px) {
   form.ligne {
     justify-content: space-between;
   }
@@ -118,7 +144,7 @@ div.voiture_liste__image-wrapper {
   }
   .box-btn_filter {
     padding-top: 1rem;
-    text-align: right;
+    text-align: center;
     width: 100%;
   }
 }
@@ -134,6 +160,9 @@ div.voiture_liste__image-wrapper {
   }
   .box-shop img {
     margin: 0;
+  }
+  .menu ul li a {
+    font-size: 16px;
   }
 
   /* filter */
@@ -169,22 +198,47 @@ div.voiture_liste__image-wrapper {
 
   /* en vendette */
   .box img {
+    height: 140px;
     max-width: 170px;
   }
   div.ec .ec__nav--prev {
-    left: -12px;
+    left: -20px;
+    top: 45%;
   }
   div.ec .ec__nav--next {
-    right: -12px;
+    right: -20px;
+    top: 45%;
   }
 
   /* .gallery */
   .gallery--3 {
     grid-template-columns: repeat(2, 1fr);
   }
+  .label-liste {
+    font-size: 14px;
+  }
+
+  .bg-ruedas {
+    box-sizing: border-box;
+    background-image: url(../assets/images/penu_f.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 100%;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    z-index: -1;
+  }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 750px) {
+  .box img {
+    height: 120px;
+    max-width: 130px;
+  }
+}
+
+@media screen and (max-width: 550px) {
   html body {
     font-size: 16px;
     margin: 0;
@@ -319,6 +373,14 @@ div.voiture_liste__image-wrapper {
   .centreV-k {
     display: flex;
     justify-content: center;
+  }
+  .box-panier {
+    position: absolute;
+    right: 12px;
+    top: 26px;
+  }
+  div.box-panier a {
+    width: 32px;
   }
 
   /* filter */
