--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,8 @@
 @import "./profil.css";
 @import "./utilisateurSysteme.css";
 @import "./formulaire.css";
-@import "./voitureDetailSGC.css";
+@import "./formulaireAjoutVoiture.css";
+@import "./voitureListeSGC.css";
 
 body {
   background-color: #303030;
@@ -40,9 +41,7 @@ hr {
 header {
   width: 100%;
 }
-.header a {
-  width: 200px;
-}
+
 titre {
   text-align: center;
 }
