--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,8 +14,8 @@
 @import "./utilisateurSysteme.css";
 @import "./formulaire.css";
 @import "./formulaireAjoutVoiture.css";
-@import "./voitureDetailSGC.css";
 @import "./custom-k.css";
+@import "./voitureListeSGC.css";
 
 body {
   background-color: #303030;
