Corr. bug insertion voiture et prép insertion images

--- a/styles/formulaireAjoutVoiture.css
+++ b/styles/formulaireAjoutVoiture.css
@@ -3,6 +3,9 @@
   width: 100%;
   min-height: 80vh;
 }
+[data-component="FormulaireAjoutVoiture"] button {
+  width: fit-content;
+}
 
 [data-component="FormulaireAjoutVoiture"] form {
   display: flex;
