--- a/styles/formulaireCommande.css
+++ b/styles/formulaireCommande.css
@@ -24,13 +24,20 @@
 }
 .formulaireCommande form button{
   max-width: 20%;
+  padding: 5px;
   margin-left: auto;
   margin-right: auto;
+}
+[data-js-payer]{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
 }
 .formulaireCommande .input-wrapper{
   margin-top: 30px;
   margin-bottom: 30px;
-  padding: 25px;
+  padding: 20px;
 
 
 }
@@ -38,10 +45,21 @@
   margin-left: 20px;
   margin-top: 20px;
 }
+[data-js-formcredit]{
+  width: 70%;
+  margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
+}
 [data-js-recap]{
-  max-width: 100%;
+  max-width: 70%;
   margin-top: 50px;
   margin-bottom: 70px;
+  border-top: 1px solid #dc6a2b;
+  border-bottom: 1px solid #dc6a2b;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 [data-js-voiturcommande]{
   display: flex;
@@ -58,6 +76,7 @@
 [data-js-taxe]{
   display: flex;
   flex-direction: column;
+  margin-bottom: 35px;
   
 }
 [data-js-taxe] div{
@@ -67,6 +86,9 @@
   display: flex;
   margin-top: 20px;
   margin-left: auto;
+}
+.prixTaxe div{
+  text-align: right;
 }
 
 [data-js-taxe]{
