--- a/styles/formulaire.css
+++ b/styles/formulaire.css
@@ -2,7 +2,8 @@ button,
 input[type="submit"],
 [data-component="VoitureDetail"] a,
 [data-component="FormulaireAjoutVoiture"] a,
-[data-component="FormulaireModifierVoiture"] a {
+[data-component="FormulaireModifierVoiture"] a,
+.UtilisateurSystemes a {
   border: 0;
   line-height: 2.5;
   padding: 0 20px;
