--- a/styles/custom-k.css
+++ b/styles/custom-k.css
@@ -22,7 +22,7 @@ html body {
   box-sizing: border-box;
   margin: auto;
   max-width: 1440;
-  padding: 0 20px;
+  padding: 0 20px 20px 20px;
   width: 100%;
   text-align: center;
 }
@@ -248,6 +248,11 @@ article.voiture_liste__voiture {
   line-height: 20px;
   padding: 4px 6px;
 }
+.info_voiture h3,
+.info_voiture span {
+  text-align: left;
+  padding-left: 15px;
+}
 div.voiture_liste__image-wrapper {
   background-color: #fff;
   max-width: 270px;
@@ -267,7 +272,7 @@ div.voiture_liste__image-wrapper {
 }
 
 /* containers */
-[data-component="Contact"] {  
+[data-component="Contact"] {
   text-align: center;
   width: 100%;
 }
