Retouches design contact, qui, termes

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,3 +8,11 @@
   width: 2em;
   display: inline-block;
 }
+[data-component="Contact"] section {
+  margin: 0 40px;
+  text-align: left;
+  background-color: #130602;
+  padding: 40px;
+  color: white;
+  border: 3px solid #dc6a2b;
+}
