--- a/styles/qui.css
+++ b/styles/qui.css
@@ -1,3 +1,11 @@
 .qui {
   min-height: 80vh;
 }
+.qui section {
+  margin: 0 40px;
+  text-align: left;
+  background-color: #130602;
+  padding: 40px;
+  color: white;
+  border: 3px solid #dc6a2b;
+}
