--- a/styles/formulaireCommande.css
+++ b/styles/formulaireCommande.css
@@ -6,6 +6,9 @@
   flex-direction: column;
 
 }
+#paimentform{
+  display: none;
+}
 
 .formulaireCommande form{
   width: 80%;
@@ -100,4 +103,28 @@
 [data-js-totaltvh], [data-js-totaltvp], [data-js-totaltvs], [data-js-totalfacture], [data-js-totalshiping]{
   margin-left: 50px;
 }
+#btn2 a, [data-js-submit] a{
+  width: 100%;
+  text-decoration: none;
+  color: white;
 
+}
+.data-js-paimentform [data-js-param="info"]{
+  display: flex;
+  flex-direction: row;
+}
+.formulaireCommande form [data-js-param="info"] div{
+  display: inline-block;
+}
+[data-js-retour]:hover{
+  color: red;
+  cursor: pointer;
+}
+@media screen and (max-width: 810px) {
+  
+  .formulaireCommande form [data-js-param="info"] div{
+    display: block;
+    margin: initial;
+  }
+
+}
