--- a/styles/formulaire.css
+++ b/styles/formulaire.css
@@ -3,7 +3,8 @@ input[type="submit"],
 [data-component="VoitureDetail"] a,
 [data-component="FormulaireAjoutVoiture"] a,
 [data-component="FormulaireModifierVoiture"] a,
-.UtilisateurSystemes a {
+.UtilisateurSystemes a,
+[data-component="Connexion"] a {
   border: 0;
   line-height: 2.5;
   padding: 0 20px;
@@ -31,15 +32,25 @@ input[type="submit"],
 [data-component="FormulaireModifierVoiture"] [data-js-component="Form"] {
   margin: 10px 0;
 }
+
 button:hover,
 input[type="submit"]:hover,
-[data-component="VoitureDetail"] a:hover {
+[data-component="VoitureDetail"] a:hover,
+[data-component="FormulaireAjoutVoiture"] a:hover,
+[data-component="FormulaireModifierVoiture"] a:hover,
+.UtilisateurSystemes a:hover,
+[data-component="Connexion"] a:hover {
   background-color: #fbc981;
 }
 
 button:active,
 input[type="submit"]:active,
-[data-component="VoitureDetail"] a:hover {
+[data-component="VoitureDetail"] a:active,
+[data-component="FormulaireAjoutVoiture"] a:active,
+[data-component="FormulaireModifierVoiture"] a:active,
+.UtilisateurSystemes a:active,
+[data-component="Connexion"] a button:active,
+[data-component="VoitureDetail"] a:active {
   box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
